--- a/techio.yml
+++ b/techio.yml
@@ -1,4 +1,6 @@
 title: AspireIT Scratch 
 plan:
-- title: Welcome
-  statement: markdowns/welcome.md
+  - title: Part 1
+    statement: markdowns/welcome.md
+  - title: Part 2
+    statement: markdowns/part2.md
