--- a/techio.yml
+++ b/techio.yml
@@ -1,6 +1,6 @@
 title: AspireIT Scratch 
 plan:
-  - title: Part 1
+  - title: Get ready, Game Master!
     statement: markdowns/welcome.md
   - title: Part 2
     statement: markdowns/part2.md
